--- a/src/components/TaskList.css
+++ b/src/components/TaskList.css
@@ -14,7 +14,7 @@ button {
     line-height: normal;
     margin: 0;
     min-height: 3.75em;
-    min-width: 0;
+    min-width: 1em;
     outline: none;
     padding: 1em 2.3em;
     text-align: center;
@@ -40,4 +40,15 @@ button:hover {
 button:active {
     box-shadow: none;
     transform: translateY(0);
+}
+
+.task-list {
+    padding: 1em;
+    border: 1px solid #ddd;
+    border-radius: 0.5em;
+    min-width: 500px;
+    margin: 0 auto;
+    background-color: #f9f9f9;
+    display: flex;
+    flex-direction: column;
 }
